@@ -1,3 +1,7 @@
+2007-06-11  George Giolfan  <georgegiolfan@yahoo.com>
+
+	* TabPanel.cs: Added.
+
 2007-05-27  George Giolfan  <georgegiolfan@yahoo.com>
 
 	* RangeBase.cs: Made Minimum and Maximum adjust Value.
